more fixes to 2023-1

--- a/_articles/RJ-2023-032/RJ-2023-032.Rmd
+++ b/_articles/RJ-2023-032/RJ-2023-032.Rmd
@@ -38,7 +38,7 @@ author:
   - Campus de Azurém - 4800-058 Guimarães
   - Portugal
   - 'ORCID: 0000-0002-8577-7665'
-date: '2023-08-26'
+date: '2023-09-24'
 date_received: '2022-05-20'
 journal:
   firstpage: 195
@@ -65,7 +65,7 @@ output:
 
 
 
-# 1. Introduction {#sec:intro}
+# Introduction {#sec:intro}
 
 Multi-state models are commonly used to analyze complex longitudinal
 survival data involving multiple events of interest ([@Andersen1993];
@@ -232,7 +232,7 @@ states and three irreversible transitions. 'Disease-free' correspond to
 the initial state, 'Diseased' the intermediate state and the absorbing
 state 'dead'.](illness-death.pdf){#IDM width="6cm"}
 
-# 2. Background and notation {#sec:methodology}
+# Background and notation {#sec:methodology}
 
 This section contains a brief description of the mathematical background
 underlying the [markovMSM](https://CRAN.R-project.org/package=markovMSM)
@@ -483,7 +483,7 @@ integrated statistics may be combined to provide an overall test of the
 dependence of the transition intensities on occupation in state $j$ at
 previous times.
 
-# 3. Application of the markovMSM {#sec: package}
+# Application of the markovMSM {#sec: package}
 
 This section offers the guidelines for the use of the
 [markovMSM](https://CRAN.R-project.org/package=markovMSM) package with
@@ -1095,7 +1095,7 @@ liver cirrhosis subjected to prednisone treatment. Reversible
 transitions are possible in transient states defined by prothrombin
 levels.](IDM_liver.pdf){#fig9 width="6.5cm"}
 
-# 4. Conclusions {#sec:conc}
+# Conclusions {#sec:conc}
 
 This paper discusses the implementation in R of new methods for checking
 the Markov assumption in multi-state models proposed by
