--- a/_articles/RJ-2023-032/Soutinho.tex
+++ b/_articles/RJ-2023-032/Soutinho.tex
@@ -8,7 +8,7 @@
 Multi-state models can be used to describe processes in which an individual moves through a finite number of states in continuous time. These models allow a detailed view of the evolution or recovery of the process and can be used to study the effect of a vector of explanatory variables on the transition intensities or to obtain prediction probabilities of future events after a given event history. In both cases, before using these models, we have to evaluate whether the Markov assumption is tenable. This paper introduces the \CRANpkg{markovMSM} package, a software application for R, which considers tests of the Markov assumption that are applicable to general multi-state models. Three approaches using existing methodology are considered: a simple method based on including covariates depending on the history; methods based on measuring the discrepancy of the non-Markov estimators of the transition probabilities to the Markovian Aalen-Johansen estimators; and, finally, methods that were developed by considering summaries from families of log-rank statistics where individuals are grouped by the state occupied by the process at a particular time point. The main functionalities of the \CRANpkg{markovMSM} package are illustrated using real data examples.
 }
 
-\section{1. Introduction} \label{sec:intro}
+\section{Introduction} \label{sec:intro}
 %\section[Introduction]{1. Introduction} \label{sec:intro}
 
 Multi-state models are commonly used to analyze complex longitudinal survival data involving multiple events of interest (\citealp{Andersen1993}; \citealp{Hougaard2000}; \citealp{Putter2007}; \citealp{MM2009}; \citealp{LFMM2019}). These models can be considered as a generalization of the survival process where survival is the ultimate outcome of interest, but where information is available about intermediate events that individuals may experience during the study period. For instance, in some biomedical applications, besides the 'healthy' initial state and the absorbing `dead' state, one may observe intermediate (transient) states based on health conditions (e.g., heart or lung disease), disease stages (e.g., stages of cancer, HIV infection or Alzheimer's), clinical symptoms (e.g., bleeding episodes), biological markers (e.g., CD4 T-lymphocyte cell counts; serum immunoglobulin levels) or they can represent a non-fatal complication in the course of the illness (e.g., cancer recurrence, transplantation, etc.). The number of states and transitions among them defines the complexity of the model, which is illustrated by a directed graph with rectangular boxes representing possible states and arrows representing the allowed transitions. Among the multi-state models, the simplest is the mortality model for survival data (with only two states). The competing risks model (\citealp{Andersen2002}; \citealp{Putter2007}) can be seen as an extension of the simple mortality model for survival data in which each individual may `die' due to any of several causes. The most common is the illness-death model, also known as the disability model, which comprises three states. In the irreversible version of this model (Figure 1), individuals start in the `alive and disease-free' state and subsequently move either to the `diseased' state or to the `dead' state. Individuals in the `diseased' state will eventually move to the `dead' state, without any possibility of recovery. Data that arises from the model depicted in Figure 1 has been termed as semi-competing risk data and can be seen as an emerging challenge for time-to-event data where two events of interest are studied: non-terminal (e.g., disease diagnosis) and terminal (e.g., death) events. The non-terminal event is observed only if it precedes the terminal event, which may occur before or after the non-terminal event. In this context, the terminal event is a competing risk for the intermediate state but not the contrary (\citealp{Xu2010}; \citealp{Li2017}; \citealp{Nevo2020}).
@@ -30,7 +30,7 @@ The organization of this paper is as follows: In Section 2, we present a brief i
 \end{figure}
 
 
-\section{2. Background and notation} \label{sec:methodology}
+\section{Background and notation} \label{sec:methodology}
 
 This section contains a brief description of the mathematical background underlying the \CRANpkg{markovMSM} package. Further details on the proposed methods can be found in \cite{soutinho_machado2020}.
 
@@ -116,7 +116,7 @@ The same authors pointed out that the use of the individual supremum or integrat
 
 %This can be achieved by combining the individual log-rank test statistics over different transitions, as well as over qualitative states ℓ and time s. This
 
-\section[Application of the markovMSM]{3. Application of the \pkg{markovMSM}} \label{sec: package}
+\section[Application of the markovMSM]{Application of the \pkg{markovMSM}} \label{sec: package}
 
 This section offers the guidelines for the use of the \CRANpkg{markovMSM} package with the R statistical program \citep{R}. To this end, a description of the functions of the package is illustrated using three real data sets. The first one involves data from a clinical trial on colon cancer modeled using the progressive illness-death model \citep{Moertel1995}. Extensions to progressive processes beyond the three-state illness-death model are demonstrated using data from the European Group for Blood and Marrow Transplantation (EBMT) \citep{Putter2007}. Finally, we use data from a study with liver cirrhosis patients subjected to prednisone treatment \citep{Andersen1993}. The package comprises seven main functions, which are briefly summarized in Table~\ref{Tab1}.  
 
@@ -620,7 +620,7 @@ The proposed methods can also be used in reversible multi-state models such as t
 \end{figure}
 
 
-\section{4. Conclusions} \label{sec:conc}
+\section{Conclusions} \label{sec:conc}
 This paper discusses the implementation in R of new methods for checking the Markov assumption in multi-state models proposed by \cite{soutinho_machado2020}. Instead of testing, as usual, the Markovianity of the multi-state process by including covariates depending on the history, \cite{soutinho_machado2020} propose global and local tests based on the comparison between estimated transition probabilities. This can be done by measuring the discrepancy between the Aalen-Johansen estimator, which gives consistent estimators in Markov processes, and recent approaches that do not rely on this assumption, given by the Landmark and the Landmark Aalen-Johansen estimators. 
 
 The use of local tests is recommended whenever the goal is to estimate the transition probabilities and, in particular, decide which estimator is the most appropriate to use: the Aalen-Johansen estimator or a robust estimator. A global test, such as the test proposed here, might be preferable for regression purposes. To this end, a common simplifying strategy is to decouple the whole process into various survival models. Then, for all permitted transitions, the transition intensities may be modeled using separate Cox models, assuming the process to be Markovian (also known as the clock forward modeling approach). When the test rejects the Markov assumption, one alternative approach is to use a semi-Markov Cox model in which the future of the process does not depend on the current time but rather on the duration of the current state.
