--- a/_articles/RJ-2023-033/RJ-2023-033.Rmd
+++ b/_articles/RJ-2023-033/RJ-2023-033.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Robust functional linear regression models
+title: Robust Functional Linear Regression Models
 abstract: With advancements in technology and data storage, the availability of functional
   data whose sample observations are recorded over a continuum, such as time, wavelength,
   space grids, and depth, progressively increases in almost all scientific branches.
@@ -60,7 +60,7 @@ output:
 
 
 
-# Introduction {#introduction .unnumbered}
+# Introduction
 
 The interest and need for developing statistical methods for analyzing
 functional data have increased in the last few decades. There have been
@@ -129,7 +129,7 @@ regression models, are reviewed and implemented using the robflreg
 package. Some ideas on how the available [R]{.sans-serif} package
 robflreg can be further improved are given at the end.
 
-# Functional linear regression models {#functional-linear-regression-models .unnumbered}
+# Functional linear regression models
 
 We present the SFLRM and FFLRM, respectively.
 
@@ -370,7 +370,7 @@ out.indx <- sim.data$`out.indx`\
 `main``\ `{=latex}`=``\ `{=latex}`expression(X[1](s)),``\ `{=latex}`mgp``\ `{=latex}`=``\ `{=latex}`c(2,``\ `{=latex}`0.5,``\ `{=latex}`0),``\ `{=latex}`ylim``\ `{=latex}`=``\ `{=latex}`range(fX1))`\
 `lines(fX1[out.indx,],``\ `{=latex}`lty``\ `{=latex}`=``\ `{=latex}`1,``\ `{=latex}`col``\ `{=latex}`=``\ `{=latex}`"grey")`
 
-# Estimation {#estimation .unnumbered}
+# Estimation
 
 We first review the classical and robust FPCA methods. Then, we will
 focus on the robust estimation of the SFLRM and FFLRM by the functional
@@ -884,7 +884,7 @@ Figure [6](#fig:6){reference-type="ref" reference="fig:6"}.
 `sort(out.indx)`\
 `#``\ `{=latex}`[1]``\ `{=latex}`2``\ `{=latex}`16``\ `{=latex}`47``\ `{=latex}`56``\ `{=latex}`69``\ `{=latex}`70``\ `{=latex}`71``\ `{=latex}`80``\ `{=latex}`82``\ `{=latex}`92``\ `{=latex}`96``\ `{=latex}`117``\ `{=latex}`134``\ `{=latex}`138``\ `{=latex}`140``\ `{=latex}`162``\ `{=latex}`173``\ `{=latex}`188``\ `{=latex}`197``\ `{=latex}`199`
 
-# Prediction {#prediction .unnumbered}
+# Prediction
 
 We review the prediction problem for a new set of functional predictors
 based on a fitted functional principal component regression model.
@@ -1063,7 +1063,7 @@ follows:
 `round(mean((Y.test``\ `{=latex}`-``\ `{=latex}`pred.classical)^2),``\ `{=latex}`4)``\ `{=latex}`#``\ `{=latex}`1.5705``\ `{=latex}`(classical``\ `{=latex}`method)`\
 `round(mean((Y.test``\ `{=latex}`-``\ `{=latex}`pred.MM)^2),``\ `{=latex}`4)``\ `{=latex}`#``\ `{=latex}`0.8166``\ `{=latex}`(MM``\ `{=latex}`method)`
 
-# Data analysis {#data-analysis .unnumbered}
+# Data analysis
 
 We consider the MaryRiverFlow dataset available in the robflreg package
 to present the superiority of the robust functional principal component
@@ -1276,7 +1276,7 @@ following code:
 
 `apply(MSPE,``\ `{=latex}`2,``\ `{=latex}`mean,``\ `{=latex}`na.rm=TRUE);``\ `{=latex}`apply(MSPE,``\ `{=latex}`2,``\ `{=latex}`sd,``\ `{=latex}`na.rm=TRUE)`
 
-# Conclusion {#conclusion .unnumbered}
+# Conclusion
 
 The [R]{.sans-serif} package robflreg provides an implementation of
 functional principal component regression model based on several robust
