--- a/articles/RJ-2023-033/beyaztas-shang.tex
+++ b/articles/RJ-2023-033/beyaztas-shang.tex
@@ -1,5 +1,5 @@
 % !TeX root = RJwrapper.tex
-\title{\mbox{Robust functional linear regression models}}
+\title{\mbox{Robust Functional Linear Regression Models}}
 \author{by Ufuk Beyaztas and Han Lin Shang}
 
 \maketitle
@@ -8,7 +8,7 @@
 With advancements in technology and data storage, the availability of functional data whose sample observations are recorded over a continuum, such as time, wavelength, space grids, and depth, progressively increases in almost all scientific branches. The functional linear regression models, including scalar-on-function and function-on-function, have become popular tools for exploring the functional relationships between the scalar response-functional predictors and functional response-functional predictors, respectively. However, most existing estimation strategies are based on non-robust estimators that are seriously hindered by outlying observations, which are common in applied research. In the case of outliers, the non-robust methods lead to undesirable estimation and prediction results. Using a readily-available \textsf{R} package \pkg{robflreg}, this paper presents several robust methods build upon the functional principal component analysis for modeling and predicting scalar-on-function and function-on-function regression models in the presence of outliers. The methods are demonstrated via simulated and empirical datasets.
 }
 
-\section*{Introduction}
+\section{Introduction}
 
 The interest and need for developing statistical methods for analyzing functional data have increased in the last few decades. There have been many recent theoretical and applied developments in functional data analysis tools \citep[see][]{ramsay1991, ramsay2002, ramsay2006, ferraty2006, horvath2012, cuevas2014, Hsing, MRS15, SK16, DM16, KoRe}. Among many others, the scalar-on-function linear regression model (SFLRM), where the response is scalar-valued and predictor(s) consist of random functions \citep[see][]{cardot1991, cardot2003, james2002, ResiOgden, chen2011, jiang2011, GBC11, dou2012, TLS19, ATW20, BSchem}, and the function-on-function linear regression model (FFLRM), where both the response and predictor(s) consist of random curves \cite[see][]{yao2005, harezlak2007, senturk2008, matsui2009, ivanescu2015, SSG15, chiou2016, BeyaztasShang2020}, have received considerable attention among researchers as a tool for exploring the functional relationship between a scalar response-functional predictors and functional response-functional predictors, respectively. In addition, please see the available \textsf{R} packages \pkg{fda} \citep{RGH22} and \pkg{refund} \citep{GSH22} for the implementation of many functional data analysis methods, including SFLRM and FFLRM.
 
@@ -18,7 +18,7 @@ The methods available in the \pkg{robflreg} package are centered on the robust f
 
 The remainder of this paper is organized as follows. The SFLRM and FFLRM, as well as the techniques used for modeling and predicting these regression models, are reviewed and implemented using the \pkg{robflreg} package. Some ideas on how the available \textsf{R} package \pkg{robflreg} can be further improved are given at the end.
 
-\section*{Functional linear regression models}
+\section{Functional linear regression models}
 
 We present the SFLRM and FFLRM, respectively.
 
@@ -179,7 +179,7 @@ lines(fX1[out.indx,], lty = 1, col = "grey")
 \end{smallverbatim}
 \end{smallexample}
 
-\section*{Estimation}
+\section{Estimation}
 
 We first review the classical and robust FPCA methods. Then, we will focus on the robust estimation of the SFLRM and FFLRM by the functional principal component regression.
 
@@ -513,7 +513,7 @@ sort(out.indx)
 \end{smallverbatim}
 \end{smallexample}
 
-\section*{Prediction}
+\section{Prediction}
 
 We review the prediction problem for a new set of functional predictors based on a fitted functional principal component regression model.
 
@@ -659,7 +659,7 @@ round(mean((Y.test - pred.MM)^2), 4) # 0.8166 (MM method)
 \end{smallverbatim}
 \end{smallexample}
 
-\section*{Data analysis}
+\section{Data analysis}
 
 We consider the MaryRiverFlow dataset available in the \pkg{robflreg} package to present the superiority of the robust functional principal component regression models over the classical model when the dataset includes outliers. The MaryRiverFlow dataset consists of hourly river-flow measurements obtained from January 2009 to December 2014 (6 years in total) in the Mary River, Australia. River-flow time series varies throughout the years due to the variation of the seasons and the amount of rainfall received at particular catchments. This problem still needs to be solved in the hydrological domain to be addressed appropriately using theoretical models.
 
@@ -816,7 +816,7 @@ apply(MSPE, 2, mean, na.rm=TRUE); apply(MSPE, 2, sd, na.rm=TRUE)
 \end{smallverbatim}
 \end{smallexample}
 
-\section*{Conclusion}
+\section{Conclusion}
 
 The \textsf{R} package \pkg{robflreg} provides an implementation of functional principal component regression model based on several robust procedures to fit and predict SFLRM and FFLRM. These methods are centered on the RFPCA of \cite{Bali2011}, a popular robust dimension reduction technique in functional data, and several robust regression parameter estimators. In addition, the package \pkg{robflreg} allows us to fit and predict SFLRM and FFLRM via the classical FPCA and least-squares estimator. Several simulation examples and empirical data analysis show that the robust procedures provide better inference for functional linear regression models when outliers are present in the response and predictor variables. The \pkg{robflreg} package code can be found at: \url{https://github.com/cran/robflreg}.
 
