--- a/articles/RJ-2023-039/harmening-kreutzmann-schmidt-salvati-schmid.tex
+++ b/articles/RJ-2023-039/harmening-kreutzmann-schmidt-salvati-schmid.tex
@@ -509,7 +509,7 @@ and a population data set \file{eusilcA\_pop} at a household level.
 %
 The generation process for both data sets is extensively described in
 \citet{emdi2019}.
-Our process is nearly equivalent, but we do not produce out-of-sample domains for the area-level version of the data sets
+Our process is nearly equivalent, but we do not produce out-of-sample domains for the area-level version of the data sets.
 The Austrian European Union Statistics on Income and Living Conditions (EU-SILC) synthetic 2006 data set (\code{eusilcP}) sourced from the \CRANpkg{simFrame} package \citep{AlfonsTempl2010} serves as basis for our data sets. The lowest regional level in the \code{eusilcP} data set consists of the nine Austrian states. Based on certain
 population size and income criteria, households were allocated to 94 Austrian
 districts resulting in the synthetic population data set \file{eusilcA\_pop}. For
@@ -849,7 +849,7 @@ consecutively) and activate the estimation of the MSE and of the information cri
 +   combined_data, domains = "Domain", method = "ml", MSE = TRUE, B = c(0,50))
 \end{example}
 \textbf{Assess the estimated model} \\
-In many publications using FH models, model diagnostics are discussed only briefly, if at all.. One reason for this might be the lack of an existing implementation of desired diagnostic measures in R or other statistical software. The \code{summary}
+In many publications using FH models, model diagnostics are discussed only briefly, if at all. One reason for this might be the lack of an existing implementation of desired diagnostic measures in R or other statistical software. The \code{summary}
 method of \pkg{emdi} provides additional information about the data and model
 components, in particular the chosen estimation methods, the number of domains,
 the log-likelihood, the information criteria by \citet{Marhuenda2014}, the adjusted $R^2$ of a standard linear model and the adjusted $R^2$ especially for FH models proposed by \citet{Lahiri2015}. Additionally, measures to
@@ -1422,26 +1422,32 @@ For the computation of the results in this paper we worked with R version 4.2.2 
 	\caption{Installed packages for the computation of the results in this paper.}\label{tab:Rpackages}
 \end{table}
 
-\address{Sylvia Harmening, Ann-Kristin Kreutzmann, Sören Schmidt\\
-  Institute for Statistics and Econometrics\\
-  School of Business \& Economics \\
-  Freie Universit\"at Berlin\\
+\address{Sylvia Harmening\\
+  Institute for Statistics and Econometrics, School of Business \& Economics, Freie Universit\"at Berlin\\
   Garystr.~21, 14195 Berlin\\
   Germany\\
-  \email{sylvia.harmening@fu-berlin.de},
-  \email{ann-kristin.kreutzmann@fu-berlin.de},\\
-  \email{soeren.pannier@fu-berlin.de}}
+  \email{sylvia.harmening@fu-berlin.de}}
+
+\address{Ann-Kristin Kreutzmann\\
+	Institute for Statistics and Econometrics, School of Business \& Economics, Freie Universit\"at Berlin\\
+	Garystr.~21, 14195 Berlin\\
+	Germany\\
+	\email{ann-kristin.kreutzmann@fu-berlin.de}}
+
+\address{Sören Schmidt\\
+	Institute for Statistics and Econometrics, School of Business \& Economics, Freie Universit\"at Berlin\\
+	Garystr.~21, 14195 Berlin\\
+	Germany\\
+	\email{soeren.pannier@fu-berlin.de}}
 
 \address{Nicola Salvati\\
-	Department of Economics and Management\\
-	University of Pisa\\
+	Department of Economics and Management, University of Pisa\\
 	Via C. Ridolfi, 10 56124 Pisa\\
 	Italy\\
 	\email{nicola.salvati@unipi.it}}
 
 \address{Timo Schmid \\
-	Institute of Statistics\\
-	Otto-Friedrich-Universit\"at Bamberg \\
+	Institute of Statistics, Otto-Friedrich-Universit\"at Bamberg \\
 	Feldkirchenstr.~21, 96052 Bamberg\\
 	Germany \\
 	\email{timo.schmid@uni-bamberg.de}}
