fix typo in editorial

--- a/_news/RJ-2023-1-editorial/RJ-2023-1-editorial.tex
+++ b/_news/RJ-2023-1-editorial/RJ-2023-1-editorial.tex
@@ -11,7 +11,7 @@ On behalf of the editorial board, I am pleased to present Volume 15 Issue 1 of t
 
 Catherine Hurley has stepped down as Editor-in-Chief, but continues to serve on the editorial board as an Executive Editor.
 Catherine has overseen the expansion of the journal as EIC to accommodate four issues a year as a response to the growing number of publications.
-Due to her relentless work she was able to maintain stability in challenging times when personal and external circumstances have affected availabilty of our editorial teams. We would like to welcome Vincent Arel-Bundoc to our team of Associate Editors.
+Due to her relentless work she was able to maintain stability in challenging times when personal and external circumstances have affected availabilty of our editorial teams. We would like to welcome Vincent Arel-Bundock to our team of Associate Editors.
 
 Behind the scenes, several people assist with the journal operations. Mitchell O'Hara-Wild continues to work on infrastructure, H. Sherry Zhang continues to develop the \CRANpkg{rjtools} package under the direction of Professor Dianne Cook. In addition, articles in this issue have been carefully copy edited by Adam Bartonicek and Chase Robertson.
 
