--- a/index.Rmd
+++ b/index.Rmd
@@ -112,7 +112,7 @@ knitr::include_graphics(c("resources/time_to_accept_plot.png",
 ```
 
 For published articles in the years `r years`, the boxplots show time from submission to accept by year of publication. Median number of days to accept is under a year. The barchart on the right refers to articles submitted in the years `r years`, and reports the status as
-rejected, in progress or accepted/published as of `r Sys.Date()`. Papers labelled 'in progress' are under review or awaiting revisions. 
+rejected, in progress or accepted/published. Papers labelled 'in progress' are under review or awaiting revisions. 
 
 
 ## Editorial board
@@ -135,7 +135,6 @@ r-journal@r-project.org
 - Louis Aslett, Durham University, UK 
 - Rasmus Bååth, Lund University, Sweden
 - Przemek Biecek, University of Warsaw, Poland
-- Simone Blomberg, University of Queensland, Australia
 - Chris Brunsdon, Maynooth University, Ireland
 - Kevin Burke, University of Limerick, Ireland
 - Mine Çetinkaya-Rundel, Duke University, USA
