--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -77,8 +77,9 @@ To submit a new article to the R Journal, you will need to complete. You will ne
 - Names of all authors.
 - Article title.
 - Article type.
-- Article keywords/tags. You should be prepared to select at least one or two from the list (which is the same as the current CRAN Task Views) and you are free to add an additional words or phrases that accurately describe your paper.
+- Article keywords/tags. You should be prepared to select at least one or two from the list and you are free to add an additional words or phrases that accurately describe your paper.
 - **Zip** file containing:
+    - finished paper files `.pdf` and `.html`. 
     - paper files to build the article including the `.Rmd`, `.tex`, `.bib`, `.sty`, figures. 
     - file to reproduce the results, including R scripts, and data.
     - motivating letter that describes why your paper is suitable for the consideration by the R Journal.
